--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ seo:
   cover: "/assets/img/icons/cover.png"
   icon: "/assets/img/icons/logo.png"
   
-GV_SECRET=${{ secrets.GV }}
+#GV_SECRET=${{ secrets.GV }}
 
 # Build settings
 theme: minima
